--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /mooc-2013-OOProgrammingWithJava-PART2/week7-week7_04.ThingSuitcaseAndContainer/nbproject/private/
 /mooc-2013-OOProgrammingWithJava-PART2/week7-week7_01.Smileys/nbproject/private/
 /mooc-2013-OOProgrammingWithJava-PART2/week7-week7_07.Dictionary/nbproject/private/
+/mooc-2013-OOProgrammingWithJava-PART2/week7-week7_01.Smileys/build/
