--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /mooc-2013-OOProgrammingWithJava-PART2/week7-week7_01.Smileys/nbproject/private/
 /mooc-2013-OOProgrammingWithJava-PART2/week7-week7_07.Dictionary/nbproject/private/
 /mooc-2013-OOProgrammingWithJava-PART2/week7-week7_01.Smileys/build/
+/mooc-2013-OOProgrammingWithJava-PART2/week7-week7_04.ThingSuitcaseAndContainer/build/
+/mooc-2013-OOProgrammingWithJava-PART2/week7-week7_07.Dictionary/build/
